static/sass/pybossa/_navbar.scss
.navbar-toggle {
    color: $white;
    border: 0px;
    background: none;
    background-color: transparent;
    border-color: none;
    padding-top: 5px;
    padding-bottom: 0px;
    font-size: 16px;
    font-weight: 600;
    text-transform: uppercase;
}

.navbar-toggle:focus {
    background-color: transparent !important;
}

.navbar-mosquito {
    background: rgba(255, 255, 255, 0.8);
    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
}


.navbar-default .navbar-nav>li>a {
    color: $brand-primary;
}

.navbar-default .navbar-nav>li>a:hover {
    color: black;
}

.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus{
    color: $brand-primary;
    background: transparent;
    border-bottom: 2px solid $brand-primary;
}

